gitops/generated/openai/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openai
  namespace: openai

spec:
  selector:
    app: openai

  ports:
  - name: http
    port: 8080
    targetPort: 8080

  type: ClusterIP
