gitops/generated/openai/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openai
  namespace: openai

spec:
  ingressClassName: traefik

  rules:
  - host: openai.shopnoltd.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: openai
            port:
              number: 8080
